# -project_tsaregorodtsev_b24-505

./: .gitignore  README.md  makefile  pyproject.toml  requirements.txt
project_func/: cli.py
project_func/scripts/: main_base.py
